// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button / appearance flat 1`] = `
<button
  className="css-bu16i2 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance primary 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance secondary 1`] = `
<button
  className="css-pbt4vr psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance stroke 1`] = `
<button
  className="css-1pp3uul psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / as link default 1`] = `
<a
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  href="https://duckduckgo.com"
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / as link with icon 1`] = `
<a
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  href="https://duckduckgo.com"
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / disabled all 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="css-1nalajf psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--disabled "
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      primary disabled
    </span>
  </button>
  <button
    className="css-pbt4vr psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="css-5qvz26 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark psds-button--disabled "
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      secondary disabled
    </span>
  </button>
  <button
    className="css-1pp3uul psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="css-jcrgzh psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark psds-button--disabled "
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      stroke disabled
    </span>
  </button>
  <button
    className="css-bu16i2 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="css-1rjramm psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark psds-button--disabled "
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      flat disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / disabled with icon 1`] = `
<button
  className="css-vjz72d psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--disabled psds-button--iconAlign-left psds-button--not-iconOnly "
  disabled={true}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button / icon flat 1`] = `
<button
  className="css-8dkqkx psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon large 1`] = `
<button
  className="css-t520ac psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon left 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon lone flat large 1`] = `
<button
  className="css-1mzw1rj psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-flat psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone flat medium 1`] = `
<button
  className="css-i4ffpe psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone flat small 1`] = `
<button
  className="css-dvk6df psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone flat xSmall 1`] = `
<button
  className="css-ut0avc psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-flat psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone primary large 1`] = `
<button
  className="css-1lo6emb psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone primary medium 1`] = `
<button
  className="css-bkirxp psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone primary small 1`] = `
<button
  className="css-5tc49u psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone primary xSmall 1`] = `
<button
  className="css-1fiuxvy psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-primary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary large 1`] = `
<button
  className="css-rm9g5a psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-secondary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary medium 1`] = `
<button
  className="css-ydscpp psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary small 1`] = `
<button
  className="css-mn3d4p psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-secondary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary xSmall 1`] = `
<button
  className="css-1mwtcm9 psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-secondary psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke large 1`] = `
<button
  className="css-wo6byy psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-stroke psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke medium 1`] = `
<button
  className="css-1cl3oxr psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke small 1`] = `
<button
  className="css-d28myp psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke xSmall 1`] = `
<button
  className="css-utdgyk psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-stroke psds-theme--dark  psds-button--iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / icon medium 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon primary 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon right 1`] = `
<button
  className="css-pu8zp0 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-right psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-8b1vtw psds-button__icon psds-button__icon--iconAlign-right "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon secondary 1`] = `
<button
  className="css-yem1i0 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon small 1`] = `
<button
  className="css-bn2mco psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon stroke 1`] = `
<button
  className="css-1w3vj1k psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon vertically aligned rows 1`] = `
<div>
  <button
    className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
    disabled={false}
    style={Object {}}
  >
    <div
      className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-15b13by psds-button__text"
    >
      With icon
    </span>
  </button>
  <button
    className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      Without icon
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / icon xSmall 1`] = `
<button
  className="css-z782b9 psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / in row same vertical height 1`] = `
<div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      className="css-b33333 psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-1e1yw2j psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-secondary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-1knupbt psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-stroke psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-q7dmls psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-flat psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      className="css-1j6gc1e psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-1runvcu psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-secondary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-1kmqdxd psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-u4vzga psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-pbt4vr psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-1pp3uul psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-bu16i2 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      className="css-kf1eef psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-itdtm6 psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-secondary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-t6awe6 psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-stroke psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
    <button
      className="css-xtxkix psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-flat psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button / layout fullWidth 1`] = `
<div
  style={
    Object {
      "outline": "3px dashed #E7558B",
      "width": "400px",
    }
  }
>
  <div>
    <button
      className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        Normal
      </span>
    </button>
  </div>
  <div>
    <button
      className="css-18brbs1 psds-button psds-button--layout-fullWidth psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
      disabled={false}
      style={Object {}}
    >
      <span
        className="css-15b13by psds-button__text"
      >
        Full width
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button / loading flat 1`] = `
<button
  className="css-xtxkix psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-flat psds-theme--dark "
  disabled={true}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-flat psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading large 1`] = `
<button
  className="css-kf1eef psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark "
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading lone icon 1`] = `
<button
  className="css-1lo6emb psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark  psds-button--iconOnly"
  disabled={true}
  style={Object {}}
>
  <div
    className="css-y80vay psds-button__icon psds-button__icon--iconAlign-left psds-button__icon--iconOnly"
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  />
</button>
`;

exports[`Storyshots Button / loading medium 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading no icon, hidden text 1`] = `
<button
  className="css-kf1eef psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Text doesnt show when loading if no icon
  </span>
</button>
`;

exports[`Storyshots Button / loading primary 1`] = `
<button
  className="css-kf1eef psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark "
  disabled={true}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading secondary 1`] = `
<button
  className="css-itdtm6 psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-secondary psds-theme--dark "
  disabled={true}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-secondary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading small 1`] = `
<button
  className="css-1j6gc1e psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark "
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading stroke 1`] = `
<button
  className="css-t6awe6 psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-stroke psds-theme--dark "
  disabled={true}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <span
        className="css-1nq0vnb psds-button__loading psds-button__loading--appearance-stroke psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading xSmall 1`] = `
<button
  className="css-b33333 psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-primary psds-theme--dark "
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-1gzzcm2=""
    >
      <span
        className="css-1agpeua psds-button__loading psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / override styles with className 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  data-css-jxpnuu=""
  disabled={false}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Green Button
  </span>
</button>
`;

exports[`Storyshots Button / override styles with raw selectors 1`] = `
Array [
  <div
    id="localized"
  >
    <button
      className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
      disabled={false}
      style={Object {}}
    >
      <div
        className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
            />
          </svg>
        </div>
      </div>
      <span
        className="css-15b13by psds-button__text"
      >
        Red by global css
      </span>
    </button>
  </div>,
  <button
    className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
    disabled={false}
    style={Object {}}
  >
    <div
      className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-15b13by psds-button__text"
    >
       Unaffected
    </span>
  </button>,
]
`;

exports[`Storyshots Button / override styles with style 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Red Button
  </span>
</button>
`;

exports[`Storyshots Button / props pass through anchor supports download 1`] = `
<a
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  download={true}
  href="/somewhere"
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Link with download
  </span>
</a>
`;

exports[`Storyshots Button / props pass through aria-expanded 1`] = `
<button
  aria-expanded={true}
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    aria-expanded
  </span>
</button>
`;

exports[`Storyshots Button / props pass through button doesnt support download 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Button with download
  </span>
</button>
`;

exports[`Storyshots Button / props pass through data-something 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  data-something="wow"
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Custom data attributes
  </span>
</button>
`;

exports[`Storyshots Button / props pass through not supported 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  onMouseOver={[Function]}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Should not mouseover
  </span>
</button>
`;

exports[`Storyshots Button / props pass through role 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  role="link"
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Role Link
  </span>
</button>
`;

exports[`Storyshots Button / props pass through title 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
  title="My caption"
>
  <span
    className="css-15b13by psds-button__text"
  >
    With title
  </span>
</button>
`;

exports[`Storyshots Button / size large 1`] = `
<button
  className="css-kf1eef psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size medium 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size small 1`] = `
<button
  className="css-1j6gc1e psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size xSmall 1`] = `
<button
  className="css-b33333 psds-button psds-button--layout-inline psds-button--size-xSmall psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / theme nested 1`] = `
Array [
  <button
    className="css-bu16i2 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      dark
    </span>
  </button>,
  <button
    className="css-7j1z4c psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--light "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      light
    </span>
  </button>,
  <button
    className="css-bu16i2 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark "
    disabled={false}
    style={Object {}}
  >
    <span
      className="css-15b13by psds-button__text"
    >
      dark
    </span>
  </button>,
]
`;

exports[`Storyshots Button / with onClick clicks once 1`] = `
<button
  className="css-15ils3b psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark  psds-button--iconAlign-left psds-button--not-iconOnly"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="css-1mgd019 psds-button__icon psds-button__icon--iconAlign-left "
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    className="css-15b13by psds-button__text"
  >
    Clicks once
  </span>
</button>
`;

exports[`Storyshots Button / with ref ref to handle focus 1`] = `
<button
  className="css-a3dmt8 psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark "
  disabled={false}
  style={Object {}}
>
  <span
    className="css-15b13by psds-button__text"
  >
    Should be focused
  </span>
</button>
`;
